<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_settings" />
    <item 
        android:id="@+id/menu_add_category" 
        android:title="@string/menu_add_category" 
        android:showAsAction="ifRoom|withText" 
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_new" />
    <item 
        android:id="@+id/menu_remove_category" 
        android:title="@string/menu_remove_category"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_remove" />
    <item
        android:id="@+id/menu_import_export_feeds"
        android:title="@string/menu_import_export_feeds"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_import_export" />
    <item
        android:id="@+id/menu_statistics"
        android:title="@string/menu_statistics"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="4"
        android:icon="@drawable/ic_action_network_cell" />
</menu>
