<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_settings" />
    <item
        android:id="@+id/menu_previous_post"
        android:title="@string/menu_previous_post"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_previous_item" />
    <item
        android:id="@+id/menu_next_post"
        android:title="@string/menu_next_post"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_next_item" />
    <item
        android:id="@+id/menu_share_post"
        android:title="@string/menu_share_post"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_share" />
</menu>
